lab_deploy/ansible_lab/sg.tf
resource "aws_security_group" "control_node_sg" {
    name        = "${var.resource_keyword}-control-node-sg"
    description = "Allows SSH and HTTP"
    vpc_id      = aws_vpc.vpc.id

    ingress {
        description = "HTTP to EC2"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTPS to EC2"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTPS to EC2"
        from_port   = 3000
        to_port     = 3000
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.resource_keyword}-control-node-sg"
    }
}

resource "aws_security_group" "managed_nodes_sg" {
    name        = "${var.resource_keyword}-managed-nodes-sg"
    description = "Allows SSH and HTTP"
    vpc_id      = aws_vpc.vpc.id

    ingress {
        description = "SSH to EC2"
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTP to EC2"
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        description = "HTTPS to EC2"
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.resource_keyword}-managed-nodes-sg"
    }
}
